--- a/templates/src/css/sass/utilities/_backgrounds.scss
+++ b/templates/src/css/sass/utilities/_backgrounds.scss
@@ -7,6 +7,7 @@
 .bg-rh-blue { background-color: $color-rh-blue !important; }
 .bg-rh-yellow { background-color: $color-rh-yellow !important; }
 .bg-rh-grey-light { background-color: $color-rh-grey-light !important; }
+.bg-rh-pink { background-color: $color-rh-pink !important; }
 .bg-primary { background-color: $color-primary !important; }
 
 .bg-rh-black,
