--- a/templates/src/css/sass/utilities/_text.scss
+++ b/templates/src/css/sass/utilities/_text.scss
@@ -45,4 +45,5 @@
 .text-rh-blue { color: $color-rh-blue !important; }
 .text-rh-yellow { color: $color-rh-yellow !important; }
 .text-rh-grey-light { color: $color-rh-grey-light !important; }
+.text-rh-pink { color: $color-rh-pink !important; }
 .text-primary { color: $color-primary !important; }
