--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -56,7 +56,7 @@ header_nav_howitworks: true
     </div>
   </div>
 
-  <section class="section bg-rh-grey-light">
+  <section class="section bg-rh-grey-light howitworks-how">
     <div class="container">
       <div class="content">
         <h3>How will my donation be distributed?</h3>
@@ -64,20 +64,20 @@ header_nav_howitworks: true
         <p>There are two types of application:</p>
         <div class="cards cards-2up">
           <div class="card bg-white">
-            <div class="card-header bg-rh-black text-white">
+            <div class="card-header bg-rh-pink text-white">
               <h3 class="card-title">Under £100</h3>
               <p><strong>(e.g. Education or training courses, essential household items, clothes for interviews)</strong></p>
             </div>
-            <div class="card-body">
+            <div class="card-body bg-white">
               <p>If the request is for under £100, applications which meet the criteria are approved almost immediately via the organisation who are supporting with the application.</p>
             </div>
           </div>
           <div class="card bg-white">
-            <div class="card-header bg-rh-black text-white">
+            <div class="card-header bg-rh-pink text-white">
               <h3 class="card-title">Over £100</h3>
               <p><strong>(e.g. Skills training, furnishings for a flat, or larger white goods such as a fridge or washing machine)</strong></p>
             </div>
-            <div class="card-body">
+            <div class="card-body bg-white">
               <p>If the request is for over £100, the application must be agreed by the Real Help Doncaster independent panel. The Panel includes people with lived experience of homelessness alongside representatives of support groups and accommodation providers.</p>
             </div>
           </div>
