--- a/templates/src/pages/styleguide-colours.hbs
+++ b/templates/src/pages/styleguide-colours.hbs
@@ -30,6 +30,7 @@ layout: styleguide
           <div class="bg-rh-yellow">.bg-rh-yellow</div>
           <div class="bg-rh-blue">.bg-rh-blue</div>
           <div class="bg-rh-grey-light">.bg-rh-grey-light</div>
+          <div class="bg-rh-pink">.bg-rh-pink</div>
           <div class="bg-primary">.bg-primary</div>
         </div>
         <div class="styleguide-colours-bg">
@@ -39,6 +40,7 @@ layout: styleguide
           <div class="text-rh-yellow">.text-rh-yellow</div>
           <div class="text-rh-blue">.text-rh-blue</div>
           <div class="bg-rh-black text-rh-grey-light">.text-rh-grey-light</div>
+          <div class="text-rh-pink">.text-rh-pink</div>
           <div class="text-primary">.text-primary</div>
         </div>
       </div>
