--- a/hugo/assets/realhelp.css
+++ b/hugo/assets/realhelp.css
@@ -520,6 +520,8 @@ p + .button { margin-top: 1rem; }
 
 .howitworks-intro { padding-bottom: 2rem; }
 
+.howitworks-intro .content { max-width: 46rem; }
+
 .howitworks-where { margin-left: 0.625rem; margin-right: 0.625rem; padding-top: 0; }
 
 .howitworks-stats { -webkit-box-align: start; -ms-flex-align: start; align-items: flex-start; }
@@ -528,11 +530,13 @@ p + .button { margin-top: 1rem; }
 
 .howitworks-stats-body { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
 
-.howitworks-stats-media { -ms-flex-item-align: end; align-self: flex-end; margin-top: 1rem; margin-left: auto; margin-right: auto; max-width: 280px; }
+.howitworks-stats-media { -ms-flex-item-align: end; align-self: flex-end; height: 280px; margin-top: 1rem; margin-left: auto; margin-right: auto; width: 280px; }
 
 @media (min-width: 768px) { .howitworks-stats-media { height: 320px; margin-left: 1em; margin-top: 0; max-width: 320px; width: 320px; } }
 
 @media (min-width: 992px) { .howitworks-stats-media { height: 420px; margin-right: -100px; max-width: 420px; width: 420px; } }
+
+.howitworks-how .content { max-width: 46rem; }
 
 .getinvolved-section { -webkit-box-align: start; -ms-flex-align: start; align-items: flex-start; }
 
@@ -555,6 +559,8 @@ p + .button { margin-top: 1rem; }
 .bg-rh-yellow { background-color: #FFE500 !important; }
 
 .bg-rh-grey-light { background-color: #F5F5F5 !important; }
+
+.bg-rh-pink { background-color: #E50750 !important; }
 
 .bg-primary { background-color: #FFE500 !important; }
 
@@ -677,6 +683,8 @@ p + .button { margin-top: 1rem; }
 .text-rh-yellow { color: #FFE500 !important; }
 
 .text-rh-grey-light { color: #F5F5F5 !important; }
+
+.text-rh-pink { color: #E50750 !important; }
 
 .text-primary { color: #FFE500 !important; }
 
