--- a/templates/src/css/sass/_variables.scss
+++ b/templates/src/css/sass/_variables.scss
@@ -25,6 +25,7 @@ $color-rh-black: #1D1D1C;
 $color-rh-yellow: #FFE500;
 $color-rh-blue: #2F87C8;
 $color-rh-grey-light: #F5F5F5;
+$color-rh-pink: #E50750;
 $color-primary: $color-rh-yellow;
 
 //
