--- a/templates/src/css/sass/pages/howitworks.scss
+++ b/templates/src/css/sass/pages/howitworks.scss
@@ -5,7 +5,7 @@
   padding-bottom: 2rem;
 
   .content {
-
+    max-width: 46rem;
   }
 }
 
@@ -29,10 +29,11 @@
 
 .howitworks-stats-media {
   align-self: flex-end;
+  height: 280px;
   margin-top: 1rem;
   margin-left: auto;
   margin-right: auto;
-  max-width: 280px;
+  width: 280px;
 
   @include media-breakpoint-up(md) {
     height: 320px;
@@ -47,5 +48,11 @@
     margin-right: -100px;
     max-width: 420px;
     width: 420px;
+  }
+}
+
+.howitworks-how {
+  .content {
+    max-width: 46rem;
   }
 }
