--- a/hugo/layouts/partials/head.html
+++ b/hugo/layouts/partials/head.html
@@ -1,6 +1,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="{{.Site.Title}}" />
+<meta property="og:locale" content="en_GB" />
+<meta property="og:url" content="{{ .Permalink }}" />
+<meta property="og:title" content="{{.Title}} {{.Site.Title}}" />
+<meta property="og:description" content="A local fund that helps homeless and vulnerable people off the street and into a healthier and safer lifestyle" />
+<meta property="og:image" content="{{.Site.BaseURL}}/assets/uploads/opengraph-20181025-1.jpg" />
 <title>{{.Title}} {{.Site.Title}}</title>
 {{ $styleMain := resources.Get "realhelp.css" | resources.Minify | resources.Fingerprint }}<link rel="stylesheet" href="{{ $styleMain.Permalink }}">
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
