--- a/hugo/layouts/_default/baseof.html
+++ b/hugo/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en-GB" xmlns:fb="http://ogp.me/ns/fb#">
+<html class="no-js" lang="en-GB">
 {{- partial "head.html" . -}}
 <body>
 
