--- a/templates/src/_components/header/_header.scss
+++ b/templates/src/_components/header/_header.scss
@@ -144,7 +144,7 @@
     }
 
     @media (min-width: $breakpoint-mobile-nav) {
-      flex: 0;
+      flex: none;
       margin: -2px 0.5rem 0 0.5rem;
       width: auto;
     }
