WCAG 2.0 Level AA compliance

--- a/templates/src/css/sass/_variables.scss
+++ b/templates/src/css/sass/_variables.scss
@@ -23,7 +23,7 @@ $color-border: #E3E3E3;
 //
 $color-rh-black: #1D1D1C;
 $color-rh-yellow: #FFE500;
-$color-rh-blue: #2F87C8;
+$color-rh-blue: #1D75B6; // Original failed WCAG 2.0
 $color-rh-grey-light: #F5F5F5;
 $color-rh-pink: #E50750;
 $color-primary: $color-rh-yellow;
