--- a/templates/src/_components/footer/_footer.scss
+++ b/templates/src/_components/footer/_footer.scss
@@ -62,7 +62,7 @@
 }
 
 .footer-body {
-  font-weight: $font-weight-light;
+  font-weight: $font-weight-normal;
   margin-top: 2rem;
 
   @include media-breakpoint-up(sm) {
