updated home page banner

--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -53,9 +53,9 @@ header_nav_home: true
         <h2 class="h1 home-partners-title">Help from our Partners</h2>
       </div>
       <div class="home-partners-media">
-        <div class="aspect aspect-2by1">
+        <div class="aspect aspect-3by1">
           {{!-- <iframe src="https://www.youtube.com/embed/pjxX5ndMCDo?rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe> --}}
-          <img alt="" src="assets/uploads/home-partners-banner-2.jpg">
+          <img alt="" src="assets/uploads/homepage-banner-20181026.png">
         </div>
       </div>
       <div class="home-partners-body">
