--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -64,7 +64,7 @@ header_nav_howitworks: true
         <p>There are two types of application:</p>
         <div class="cards cards-2up">
           <div class="card bg-white">
-            <div class="card-header bg-rh-pink text-white">
+            <div class="card-header bg-primary text-black">
               <h3 class="card-title">Under £100</h3>
               <p><strong>(e.g. Education or training courses, essential household items, clothes for interviews)</strong></p>
             </div>
@@ -73,7 +73,7 @@ header_nav_howitworks: true
             </div>
           </div>
           <div class="card bg-white">
-            <div class="card-header bg-rh-pink text-white">
+            <div class="card-header bg-primary text-black">
               <h3 class="card-title">Over £100</h3>
               <p><strong>(e.g. Skills training, furnishings for a flat, or larger white goods such as a fridge or washing machine)</strong></p>
             </div>
