--- a/hugo/layouts/partials/head.html
+++ b/hugo/layouts/partials/head.html
@@ -11,4 +11,12 @@
 <title>{{.Title}} {{.Site.Title}}</title>
 {{ $styleMain := resources.Get "realhelp.css" | resources.Minify | resources.Fingerprint }}<link rel="stylesheet" href="{{ $styleMain.Permalink }}">
 {{if .IsHome }}<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{{end}}
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-57866636-16"></script>
+<script>
+ window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-57866636-16');
+</script>
 </head>
