added google tag mananger

--- a/hugo/layouts/partials/head.html
+++ b/hugo/layouts/partials/head.html
@@ -11,7 +11,6 @@
 <title>{{.Title}} {{.Site.Title}}</title>
 {{ $styleMain := resources.Get "realhelp.css" | resources.Minify | resources.Fingerprint }}<link rel="stylesheet" href="{{ $styleMain.Permalink }}">
 {{if .IsHome }}<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{{end}}
-
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-57866636-16"></script>
 <script>
  window.dataLayer = window.dataLayer || [];
@@ -19,4 +18,16 @@
   gtag('js', new Date());
   gtag('config', 'UA-57866636-16');
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  
+  })(window,document,'script','dataLayer','GTM-TDX6XDK');</script>
+  
+  <!-- End Google Tag Manager -->
 </head>
