added about us page

--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -8,6 +8,7 @@
       <nav class="header-body" role="navigation" aria-labelledby="nav-site">
         <h2 class="sr-only" id="nav-site">Site navigation</h2>
         <ul class="header-nav">
+          <li><a href="/about-us/">About us</a></li>
           <li><a href="/how-it-works/">How it works</a></li>
           <li><a href="/how-to-apply/">How to apply</a></li>
           <li><a href="/get-involved/">Get involved</a></li>
