--- a/hugo/layouts/partials/head.html
+++ b/hugo/layouts/partials/head.html
@@ -4,4 +4,21 @@
 <title>{{.Title}} {{.Site.Title}}</title>
 {{ $styleMain := resources.Get "realchange.css" | resources.Minify | resources.Fingerprint }}<link rel="stylesheet" href="{{ $styleMain.Permalink }}">
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128546172-1"></script>
+
+<script>
+
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag(){dataLayer.push(arguments);}
+
+  gtag('js', new Date());
+
+ 
+
+  gtag('config', 'UA-128546172-1');
+
+</script>
 </head>
