--- a/hugo/layouts/partials/head.html
+++ b/hugo/layouts/partials/head.html
@@ -1,11 +1,17 @@
-<head>
+<head prefix="og: http://ogp.me/ns#">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="{{.Site.Title}}" />
+<meta property="og:locale" content="en_GB" />
+<meta property="og:url" content="{{ .Permalink }}" />
+<meta property="og:title" content="{{.Title}} {{.Site.Title}}" />
+<meta property="og:description" content="Real Change is a fund for Wigan & Leigh that pays for items that local people need to end and prevent homelessness." />
+<meta property="og:image" content="{{.Site.BaseURL}}assets/uploads/opengraph-20181123.png" />
 <title>{{.Title}} {{.Site.Title}}</title>
 {{ $styleMain := resources.Get "realchange.css" | resources.Minify | resources.Fingerprint }}<link rel="stylesheet" href="{{ $styleMain.Permalink }}">
-<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-
+{{if .IsHome }}<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{{end}}
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128546172-1"></script>
 
 <script>
