--- a/hugo/layouts/partials/head.html
+++ b/hugo/layouts/partials/head.html
@@ -6,7 +6,7 @@
 <meta property="og:locale" content="en_GB" />
 <meta property="og:url" content="{{ .Permalink }}" />
 <meta property="og:title" content="{{.Title}} {{.Site.Title}}" />
-<meta property="og:description" content="Real Change is a fund for Wigan & Leigh that pays for items that local people need to end and prevent homelessness." />
+<meta property="og:description" content="The Real Change fund supports people who are homeless by paying for items they need - a deposit for a home, a training course, or clothes for a job interview." />
 <meta property="og:image" content="{{.Site.BaseURL}}assets/uploads/opengraph-20181123.png" />
 <title>{{.Title}} {{.Site.Title}}</title>
 {{ $styleMain := resources.Get "realchange.css" | resources.Minify | resources.Fingerprint }}<link rel="stylesheet" href="{{ $styleMain.Permalink }}">
