--- a/hugo/layouts/partials/head.html
+++ b/hugo/layouts/partials/head.html
@@ -7,7 +7,7 @@
 <meta property="og:url" content="{{ .Permalink }}" />
 <meta property="og:title" content="{{.Title}} {{.Site.Title}}" />
 <meta property="og:description" content="The Real Change fund supports people who are homeless by paying for items they need - a deposit for a home, a training course, or clothes for a job interview." />
-<meta property="og:image" content="{{.Site.BaseURL}}assets/uploads/opengraph-20181123.png" />
+<meta property="og:image" content="{{.Site.BaseURL}}assets/uploads/opengraph-20181123.jpg" />
 <title>{{.Title}} {{.Site.Title}}</title>
 {{ $styleMain := resources.Get "realchange.css" | resources.Minify | resources.Fingerprint }}<link rel="stylesheet" href="{{ $styleMain.Permalink }}">
 {{if .IsHome }}<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{{end}}
