--- a/templates/src/pages/page-stories.hbs
+++ b/templates/src/pages/page-stories.hbs
@@ -20,10 +20,10 @@ header_nav_casestudies: true
     </div>
   </div>
 
-  <section class="section home-stories bg-rc-aubergine edge edge-top edge-rc-aubergine-top">
+  <section class="section home-stories bg-rc-sunny edge edge-top edge-rc-sunny-top">
     <div class="container">
       <div class="home-stories-header">
-        <h2 class="h1 home-stories-title bg-rc-sunny">56 people helped so far in Wigan &amp; Leigh</h2>
+        <h2 class="h1 home-stories-title">56 people helped so far in Wigan &amp; Leigh</h2>
       </div>
       <div class="home-stories-body">
         <div class="card-story card-stroy-witharrow">
@@ -49,7 +49,7 @@ header_nav_casestudies: true
         </div>
       </div>
       <div class="home-stories-footer text-center">
-        <a class="button button-primary mb-md" href="#">Donate and make a real change</a>
+        <a class="button" href="#">Donate and make a real change</a>
       </div>
     </div>
   </section>
