Correct Stories bg colour

--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -51,14 +51,14 @@ header_nav_home: true
       <div class="home-stories-body">
         <div class="card-story card-stroy-witharrow">
           <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
-          <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+          <div class="card-story-image aspect aspect-5by2 bg-rc-spark">
             <img alt="" src="assets/uploads/story-jack-5by2.jpg">
           </div>
           <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
         </div>
         <div class="card-story card-stroy-witharrow">
           <h3 class="card-story-title">“Real change helped me when I needed it most”</h3>
-          <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+          <div class="card-story-image aspect aspect-5by2 bg-rc-spark">
             <img alt="" src="assets/uploads/story-danny-5by2.jpg">
           </div>
           <a class="card-story-cta" href="page-casestudy.html">Read Danny’s story</a>
