--- a/hugo/layouts/stories/stories.html
+++ b/hugo/layouts/stories/stories.html
@@ -26,7 +26,7 @@
   {{ range (where .Site.RegularPages.ByDate.Reverse "Section" "stories") }}
   <div class="card-story card-stroy-witharrow">
     <h3 class="card-story-title">{{ .Params.summary.heading }}</h3>
-    <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+    <div class="card-story-image aspect aspect-5by2 bg-rc-spark">
       <img alt="" src="{{ .Params.summary.image }}">
     </div>
     <a class="card-story-cta" href="{{ .Permalink }}">{{ .Params.summary.text }}</a>
