--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -7,7 +7,7 @@
           <div class="header-brand-inner bg-rc-dive">
             <img alt="Real Change" class="header-brand-logo" height="63" src="/assets/real-change-logo-x2.png" width="55">
           </div>
-          <div class="header-brand-subtitle">Wigan & Leigh</div>
+          <div class="header-brand-subtitle">Rochdale</div>
         </a>
       </div>
       <nav class="header-body" role="navigation" aria-labelledby="nav-site">
@@ -16,7 +16,7 @@
           <li><a href="/how-it-works/">How it works</a></li>
           <li><a href="/how-to-apply/">How to apply</a></li>
           <li><a href="/get-involved/">Get involved</a></li>
-          <li class="header-nav-donate"><a class="button" href="https://www.justgiving.com/campaign/realchangewiganandleigh" target="_blank">Donate</a></li>
+          <li class="header-nav-donate"><a class="button" href="https://www.justgiving.com/campaign/realchangerochdale" target="_blank">Donate</a></li>
         </ul>
       </nav>
       {{ if .hero }}
