--- a/templates/src/_components/footer/_footer.scss
+++ b/templates/src/_components/footer/_footer.scss
@@ -110,7 +110,7 @@
   position: relative;
 
   svg {
-    color: $color-rc-dive;
+    color: $color-rc-moss;
     fill: currentColor;
     left: 0;
     position: absolute;
