--- a/templates/src/_components/header/header.hbs
+++ b/templates/src/_components/header/header.hbs
@@ -4,7 +4,7 @@
     <div class="header-inner">
       <div class="header-brand">
         <a href="index.html">
-          <div class="header-brand-inner bg-rc-dive">
+          <div class="header-brand-inner bg-rc-moss">
             <img alt="Real Change" class="header-brand-logo" height="63" src="assets/real-change-logo-x2.png" width="55">
           </div>
           <div class="header-brand-subtitle">Wigan &amp; Leigh</div>
