--- a/templates/src/css/sass/utilities/_text.scss
+++ b/templates/src/css/sass/utilities/_text.scss
@@ -51,6 +51,6 @@
 .text-rc-sage { color: $color-rc-sage !important; }
 .text-rc-moss { color: $color-rc-moss !important; }
 .text-rc-dream { color: $color-rc-dream !important; }
-.text-rc-dive { color: $color-rc-dive !important; }
+.text-rc-dive { color: $color-rc-moss !important; }
 .text-rc-blue { color: $color-rc-blue !important; }
 .text-primary { color: $color-primary !important; }
