--- a/templates/src/pages/page-casestudy.hbs
+++ b/templates/src/pages/page-casestudy.hbs
@@ -40,7 +40,7 @@ layout: default
     </div>
   </article>
 
-  <section class="section bg-rc-dive pre-footer-withcityscape edge edge-top edge-rc-dive-top">
+  <section class="section bg-rc-moss pre-footer-withcityscape edge edge-top edge-rc-moss-top">
     <div class="container">
       <div class="content">
         <h3>{{> icon-like icon-like__height="44" icon-like__width="44" }} The real change you made</h3>
