--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -26,7 +26,7 @@ header_nav_home: true
         </div>
       </div>
       <div class="home-intro-split">
-        <div class="boxed edges bg-rc-dive home-intro-who">
+        <div class="boxed edges bg-rc-moss home-intro-who">
           <div class="boxed-inner">
             <h2>Who does Real Change help?</h2>
             <p><strong>The Real Change fund supports individuals who are homeless by paying for items they need -</strong> a deposit for a home, a training course, clothes for a job interview, furnishing for a new flat, or travel costs.</p>
@@ -70,7 +70,7 @@ header_nav_home: true
     </div>
   </section>
 
-  <section class="section bg-rc-dive home-partners pre-footer-withcityscape edge edge-top edge-rc-dive-top">
+  <section class="section bg-rc-moss home-partners pre-footer-withcityscape edge edge-top edge-rc-moss-top">
     <div class="container">
       <div class="home-partners-header">
         <h2 class="h1 home-partners-title">{{> icon-like icon-like__height="44" icon-like__width="44" }} Help from our Partners</h2>
