--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -63,28 +63,28 @@ header_nav_howitworks: true
     </div>
   </div>
 
-  <section class="section bg-rc-dive pre-footer-withcityscape edge edge-top edge-rc-dive-top">
+  <section class="section bg-rc-moss pre-footer-withcityscape edge edge-top edge-rc-moss-top">
     <div class="container">
       <div class="content">
         <h3>{{> icon-checked icon-checked__height="44" icon-checked__width="44" }}  How will my donation be spent?</h3>
         <p>Your donation joins the central Real Change funding pot. <strong><a href="#">Local charities</a></strong> and organisations work directly with individuals who are homeless, and apply for funds to pay for items they need. Depending on the amount needed, there are two levels of fund requests:</p>
         <div class="cards cards-2up">
           <div class="card bg-white">
-            <div class="card-header bg-rc-spark text-white edges edges-nobottom edges-rc-dive">
+            <div class="card-header bg-rc-spark text-white edges edges-nobottom edges-rc-moss">
               <h3 class="card-title">Under £100</h3>
               <p><strong>(e.g. Education or training courses, furniture or househould items, clothes for interviews)</strong></p>
             </div>
-            <div class="card-body edges edges-notop edges-rc-dive">
+            <div class="card-body edges edges-notop edges-rc-moss">
               <p>If the request is for under £100, Real Change partner agencies can submit an online application.</p>
               <p>This excludes cash, emergency accommodation, food or other items which are available for free elsewhere.</p>
             </div>
           </div>
           <div class="card bg-white">
-            <div class="card-header bg-rc-spark text-white edges edges-nobottom edges-rc-dive">
+            <div class="card-header bg-rc-spark text-white edges edges-nobottom edges-rc-moss">
               <h3 class="card-title">Over £100</h3>
               <p><strong>(e.g. Deposit or rent, furnishings for a flat, white goods over £100)</strong></p>
             </div>
-            <div class="card-body edges edges-notop edges-rc-dive">
+            <div class="card-body edges edges-notop edges-rc-moss">
               <p>If the request is for over £100, the application must be agreed by the Real Change panel.</p>
               <p>The Real Change panel includes: Lorem ipsum dolor sit amet, lorem ipsum dolor sit amet, lorem ipsum dolor sti amet.</p>
             </div>
