--- a/templates/src/pages/styleguide-boxed.hbs
+++ b/templates/src/pages/styleguide-boxed.hbs
@@ -123,10 +123,10 @@ layout: styleguide
           <a class="button button-primary" href="#">Button</a>
         </div>
       </div>
-      <div class="boxed bg-rc-dive">
+      <div class="boxed bg-rc-moss">
         <div class="boxed-inner">
           <h2>Boxed</h2>
-          <p>This box is .boxed.bg-rc-dive - this is a <a href="#">link</a></p>
+          <p>This box is .boxed.bg-rc-moss - this is a <a href="#">link</a></p>
           <a class="button button-primary" href="#">Button</a>
         </div>
       </div>
