--- a/templates/src/pages/styleguide-colours.hbs
+++ b/templates/src/pages/styleguide-colours.hbs
@@ -35,7 +35,7 @@ layout: styleguide
           <div class="bg-rc-sage">.bg-rc-sage</div>
           <div class="bg-rc-moss">.bg-rc-moss</div>
           <div class="bg-rc-dream">.bg-rc-dream</div>
-          <div class="bg-rc-dive">.bg-rc-dive</div>
+          <div class="bg-rc-moss">.bg-rc-moss</div>
           <div class="bg-rc-blue">.bg-rc-blue</div>
           <div class="bg-rc-primary">.bg-rc-primary</div>
         </div>
@@ -51,7 +51,7 @@ layout: styleguide
           <div class="text-rc-sage">.text-rc-sage</div>
           <div class="text-rc-moss">.text-rc-moss</div>
           <div class="text-rc-dream">.text-rc-dream</div>
-          <div class="text-rc-dive">.text-rc-dive</div>
+          <div class="text-rc-moss">.text-rc-moss</div>
           <div class="text-rc-blue">.text-rc-blue</div>
           <div class="text-rc-primary">.text-rc-primary</div>
         </div>
