--- a/templates/src/pages/styleguide-header.hbs
+++ b/templates/src/pages/styleguide-header.hbs
@@ -39,7 +39,7 @@ layout: styleguide
   &#x3C;div class=&#x22;header-inner&#x22;&#x3E;
     &#x3C;div class=&#x22;header-brand&#x22;&#x3E;
       &#x3C;a href=&#x22;#&#x22;&#x3E;
-        &#x3C;div class=&#x22;header-brand-inner bg-rc-dive&#x22;&#x3E;
+        &#x3C;div class=&#x22;header-brand-inner bg-rc-moss&#x22;&#x3E;
           &#x3C;img alt=&#x22;Real Change&#x22; class=&#x22;header-brand-logo&#x22; height=&#x22;63&#x22; src=&#x22;assets/real-change-logo-x2.png&#x22; width=&#x22;55&#x22;&#x3E;
         &#x3C;/div&#x3E;
         &#x3C;div class=&#x22;header-brand-subtitle&#x22;&#x3E;Wigan &#x26;amp; Leigh&#x3C;/div&#x3E;
@@ -68,7 +68,7 @@ layout: styleguide
   &#x3C;div class=&#x22;header-inner&#x22;&#x3E;
     &#x3C;div class=&#x22;header-brand&#x22;&#x3E;
       &#x3C;a href=&#x22;#&#x22;&#x3E;
-        &#x3C;div class=&#x22;header-brand-inner bg-rc-dive&#x22;&#x3E;
+        &#x3C;div class=&#x22;header-brand-inner bg-rc-moss&#x22;&#x3E;
           &#x3C;img alt=&#x22;Real Change&#x22; class=&#x22;header-brand-logo&#x22; height=&#x22;63&#x22; src=&#x22;assets/real-change-logo-x2.png&#x22; width=&#x22;55&#x22;&#x3E;
         &#x3C;/div&#x3E;
         &#x3C;div class=&#x22;header-brand-subtitle&#x22;&#x3E;Wigan &#x26;amp; Leigh&#x3C;/div&#x3E;
@@ -106,7 +106,7 @@ layout: styleguide
   &#x3C;div class=&#x22;header-inner&#x22;&#x3E;
     &#x3C;div class=&#x22;header-brand&#x22;&#x3E;
       &#x3C;a href=&#x22;#&#x22;&#x3E;
-        &#x3C;div class=&#x22;header-brand-inner bg-rc-dive&#x22;&#x3E;
+        &#x3C;div class=&#x22;header-brand-inner bg-rc-moss&#x22;&#x3E;
           &#x3C;img alt=&#x22;Real Change&#x22; class=&#x22;header-brand-logo&#x22; height=&#x22;63&#x22; src=&#x22;assets/real-change-logo-x2.png&#x22; width=&#x22;55&#x22;&#x3E;
         &#x3C;/div&#x3E;
         &#x3C;div class=&#x22;header-brand-subtitle&#x22;&#x3E;Wigan &#x26;amp; Leigh&#x3C;/div&#x3E;
@@ -144,7 +144,7 @@ layout: styleguide
   &#x3C;div class=&#x22;header-inner&#x22;&#x3E;
     &#x3C;div class=&#x22;header-brand&#x22;&#x3E;
       &#x3C;a href=&#x22;#&#x22;&#x3E;
-        &#x3C;div class=&#x22;header-brand-inner bg-rc-dive&#x22;&#x3E;
+        &#x3C;div class=&#x22;header-brand-inner bg-rc-moss&#x22;&#x3E;
           &#x3C;img alt=&#x22;Real Change&#x22; class=&#x22;header-brand-logo&#x22; height=&#x22;63&#x22; src=&#x22;assets/real-change-logo-x2.png&#x22; width=&#x22;55&#x22;&#x3E;
         &#x3C;/div&#x3E;
         &#x3C;div class=&#x22;header-brand-subtitle&#x22;&#x3E;Wigan &#x26;amp; Leigh&#x3C;/div&#x3E;
