--- a/hugo/assets/realchange.css
+++ b/hugo/assets/realchange.css
@@ -281,7 +281,7 @@ p + .button { margin-top: 1rem; }
 
 .card-story-image { border-top-left-radius: 15px; border-top-right-radius: 15px; -webkit-box-ordinal-group: 2; -ms-flex-order: 1; order: 1; }
 
-.card-story-cta { color: #5E71BA !important; font-weight: 700; -webkit-box-ordinal-group: 4; -ms-flex-order: 3; order: 3; margin-bottom: 1rem; padding: 0 1.5rem; }
+.card-story-cta { color: #388269 !important; font-weight: 700; -webkit-box-ordinal-group: 4; -ms-flex-order: 3; order: 3; margin-bottom: 1rem; padding: 0 1.5rem; }
 
 .card-story-cta:hover { color: #000000 !important; }
 
@@ -325,6 +325,8 @@ p + .button { margin-top: 1rem; }
 
 .edge-rc-dive-top::before { background-image: url(assets/edge-rc-dive-top.png); }
 
+.edge-rc-moss-top::before { background-image: url(assets/edge-rc-moss-top.png); }
+
 .edge-rc-sunny-top::before { background-image: url(assets/edge-rc-sunny-top.png); }
 
 .edges { background-image: url(assets/edges-left.png), url(assets/edges-right.png); background-position: 0 0, 100% 0; background-repeat: repeat-y, repeat-y; background-size: 4px 336px, 4px 336px; position: relative; }
@@ -344,6 +346,12 @@ p + .button { margin-top: 1rem; }
 .edges-rc-dive::before { background-image: url(assets/edges-rc-dive-top.png); }
 
 .edges-rc-dive::after { background-image: url(assets/edges-rc-dive-bottom.png); }
+
+.edges-rc-moss { background-image: url(assets/edges-rc-moss-left.png), url(assets/edges-rc-moss-right.png); }
+
+.edges-rc-moss::before { background-image: url(assets/edges-rc-moss-top.png); }
+
+.edges-rc-moss::after { background-image: url(assets/edges-rc-moss-bottom.png); }
 
 .footer { background-color: #FFFFFF; }
 
@@ -391,7 +399,7 @@ p + .button { margin-top: 1rem; }
 
 .footer-body-icon { padding-left: 1.75rem; position: relative; }
 
-.footer-body-icon svg { color: #5E71BA; fill: currentColor; left: 0; position: absolute; top: 4px; }
+.footer-body-icon svg { color: #388269; fill: currentColor; left: 0; position: absolute; top: 4px; }
 
 .footer-info { font-size: 0.875rem; }
 
@@ -425,7 +433,7 @@ p + .button { margin-top: 1rem; }
 
 @media (min-width: 768px) { .header-wrap { padding-bottom: 1.5rem; } }
 
-.header-wrap::before { background-color: #5E71BA; bottom: 0; content: ""; display: block; left: 172px; margin-right: -400px; position: absolute; right: 50%; top: 0; -webkit-transform: skew(-44deg, 0deg); -ms-transform: skew(-44deg, 0deg); transform: skew(-44deg, 0deg); -webkit-transform-origin: 0 0; -ms-transform-origin: 0 0; transform-origin: 0 0; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; z-index: 1; }
+.header-wrap::before { background-color: #388269; bottom: 0; content: ""; display: block; left: 172px; margin-right: -400px; position: absolute; right: 50%; top: 0; -webkit-transform: skew(-44deg, 0deg); -ms-transform: skew(-44deg, 0deg); transform: skew(-44deg, 0deg); -webkit-transform-origin: 0 0; -ms-transform-origin: 0 0; transform-origin: 0 0; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; z-index: 1; }
 
 @media (min-width: 576px) { .header-wrap::before { left: 252px; margin-right: 0; right: -152px; } }
 
@@ -821,7 +829,7 @@ p + .button { margin-top: 1rem; }
 
 .text-rc-dream { color: #48BEDE !important; }
 
-.text-rc-dive { color: #5E71BA !important; }
+.text-rc-dive { color: #388269 !important; }
 
 .text-rc-blue { color: #2FA0BC !important; }
 
