--- a/templates/src/_components/card/_card.scss
+++ b/templates/src/_components/card/_card.scss
@@ -85,7 +85,7 @@
 }
 
 .card-story-cta {
-  color: #5E71BA !important;
+  color: $color-rc-moss !important;
   font-weight: $font-weight-bold;
   order: 3;
   margin-bottom: 1rem;
