added mailing list link to footer

--- a/templates/src/_components/footer/footer.hbs
+++ b/templates/src/_components/footer/footer.hbs
@@ -16,6 +16,10 @@
           {{> icon-book-bag icon-book-bag__height="20" icon-book-bag__width="20" }}
           Find out how your business can apply for <a href="#">Corporate partnership</a>
         </p>
+        <p class="footer-body-icon">
+          {{> icon-email icon-email__height="20" icon-email__width="23" }}
+          Join our <a href="">Mailing List</a>
+        </p>
       </div>
       {{/if}}
       {{#if footer__logo}}
