--- a/hugo/layouts/partials/head.html
+++ b/hugo/layouts/partials/head.html
@@ -12,19 +12,15 @@
 {{ $styleMain := resources.Get "realchange.css" | resources.Minify | resources.Fingerprint }}<link rel="stylesheet" href="{{ $styleMain.Permalink }}">
 {{if .IsHome }}<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{{end}}
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id="></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131667660-1"></script>
 
 <script>
 
   window.dataLayer = window.dataLayer || [];
 
   function gtag(){dataLayer.push(arguments);}
-
   gtag('js', new Date());
-
- 
-
-  gtag('config', 'UA-128546172-1');
+  gtag('config', 'UA-131667660-1');
 
 </script>
 </head>
